get employees base on acitve or not
